--- a/winebubble_lizzy copy/css/styles.css
+++ b/winebubble_lizzy copy/css/styles.css
@@ -1,7 +1,35 @@
 body {
+    margin: 20px;
+    padding: 20px;
+}
+
+body div{
     /*margin: 20px;*/
     /*padding: 20px;*/
+    position: relative;
+    z-index: 2;
+    /*background-image: url("../img/grape_leaves.jpg");*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: cover;*/
 }
+
+body::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.15;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/grape_leaves.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*background-color: rgba(255, 255, 255, 0.6);*/
+}
+
 
 h1 {
     padding: 20px;
@@ -13,11 +41,34 @@ h1 {
     padding: 20px;
 }
 
+.toolTip {
+    position: absolute;
+    text-align: left;
+    /*width: 260px;*/
+    /*height: 100px;*/
+    padding: 2px;
+    font: 10px sans-serif;
+    background: rgba(114,47,55,0.5);
+    border-radius: 8px;
+}
+
+#toolTip {
+    border: thin solid grey;
+    border-radius: 5px;
+    background: lightgrey;
+    padding: 10px;
+}
+
+p {
+    font-size: 12px;
+    line-height: 1.6;
+    margin: 0px;
+    padding: 0px;
+}
 
 
-/*#orderSelector {*/
-/*    color: #fff;*/
-/*    border-color: #343a40;*/
-/*    background: #5a6673 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='white' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px !important;*/
-/*    width: 20%;*/
-/*}*/
+.tier-labels {
+    font-size: 14px;
+    font-weight: bold;
+}
+
