--- a/wineweb_hannah copy/css/style.css
+++ b/wineweb_hannah copy/css/style.css
@@ -1,3 +1,8 @@
+/* Radar Plots*/
+
+#section3{
+  height: 200vh;
+}
 
 /*MAP*/
 
@@ -56,6 +61,10 @@ p {
   margin: 0;
   padding: 0;
   /*color: black !important;*/
+}
+
+#hannah-p{
+  font-size: 3px;
 }
 
 .x-axis {
